fixed the display, aligned the nav and fixed the right color

--- a/style.css
+++ b/style.css
@@ -15,6 +15,8 @@ body {
     width: 100%;
     background-color:#ffffff;
     border-bottom: solid 1px #567b95;
+    position: fixed;
+    top: 0px;
 }
 nav .right-nav{
     display: inline;
@@ -24,11 +26,12 @@ nav .right-nav{
 nav .left-nav a{
     display: inline;
     float: left;
-    padding-left: 7px;
-    margin: 5px;
+    padding-left: 5px;
+    margin: 5px 0px 0px 2px;
 } 
 nav .left-nav a:last-of-type{
-    padding-top: 10px;
+    padding-top: 8px;
+    padding-left: 1rem;
     color: black;
     font-family: cheltenham, Arial, Helvetica, sans-serif
     font-size: 14.25px;
@@ -56,12 +59,21 @@ nav .center-nav{
     background-color: #567b95;
     border: 1px solid #326891;
     border-radius: 3px;
+    margin: 2px 1px 0px;
     padding: 11px 12px 8px;
+    font-family: cheltenham, Arial, Helvetica, sans-serif;
     text-transform: uppercase;
     font-weight: 700;
     font-size: 11px;
-    line-height: 11px;
+    line-height: 13px;
     letter-spacing: 0.05em;
+}
+.right-nav button:last-of-type {
+    margin-right: 16px;
+}
+article .firstSection {
+    text-align: center;
+    margin-top: 200px;
 }
 /*
 .right-nav{
